--- a/LunarClient.desktop
+++ b/LunarClient.desktop
@@ -2,10 +2,8 @@
 Version=1.0
 Type=Application
 Name=Lunar Client
-Comment=Launch Lunar Client for Minecraft
-Exec=env DISPLAY=:1 /workspaces/vmtest/squashfs-root/AppRun --no-sandbox
-Icon=/workspaces/vmtest/squashfs-root/usr/share/icons/hicolor/1024x1024/apps/lunarclient.png
+Comment=Launch Lunar Client
+Exec=/workspaces/vmtest/squashfs-root/AppRun
+Icon=/workspaces/vmtest/squashfs-root/lunarclient.png
 Terminal=false
 Categories=Game;
-Path=/workspaces/vmtest/squashfs-root
-StartupNotify=true
